<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>


    <string name="app_name">Critical Mass</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_application">Application</string>
    <string name="title_activity_maps">Critical Mass</string>

    <!-- Event List Activity -->
    <string name="hint">Create your mass event here!</string>
    <string name="enter_text">Create!</string>
    <string name="creation_toast">New mass event has been created!</string>

    <!-- Event Info Activity -->
    <string name="activity_name">Giraffe watching!</string>
    <string name="activity_description">
        \nA great chance to watch giraffes in the 5Cs.
        \n
        \nFree Boba tea available!
        \nHomework extensions available!
        \nGreat app susurri free for download!
        </string>

    <string name="hint_enter_comment">Share your thoughts on this event!</string>

    <string name="empty"></string>

    <string-array name="drawer_buttons">
        <item>List</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
