<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffffff"
              android:gravity="center_vertical"
              android:weightSum="4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="30dp"
                android:text="@string/app_name"
                android:textColor="#ff3f4f57"
                android:textSize="60dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtusername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_name"
                android:layout_gravity="center_horizontal"
                android:text="@string/Username"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtusername"
                android:inputType="text"/>


            <TextView
                android:id="@+id/txtpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:text="@string/Password"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtpassword"
                android:inputType="textPassword"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:orientation="horizontal"
                android:weightSum="2">


                <Button
                    android:id="@+id/login"
                    style="@style/dialog_blue_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/LoginBtn"/>

                <Button
                    android:id="@+id/signup"
                    style="@style/dialog_blue_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/SignupBtn"/>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</LinearLayout>
